2006-02-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* BG Keyring Mod and SI Fixes are now licensed under the GNU GPL.
	* For the BG Keyring Mod, I also modified a bit the NPC spellcasting
	  items and routines, and started work in a spellcasting pseudo-AI.

2006-02-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed a crash when using 'actor frame' script opcodes.

2006-02-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/databuf.h: Ryan's cleanup of Pentagram's IFileDataSource::eof()

2006-02-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed potential crash introduced by the previous fix.
	* Fixed animated flag for Exult Studio edited/created eggs.

2006-02-25  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed brand-new bug preventing many egg types from correctly hatching.

2006-02-25    <jeff@mini.nerble.net>

	* objs/egg.cc (public): Rewrote so that each egg type has its own
	class. 

2006-02-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc: Removing some old, unused code.
	* Makefile.common: Fixed wud compile problem under MinGW.

2006-02-20    <jeff@mini.nerble.net>

	* objs/egg.cc,etc:  Support shapes >= 1024 in monster eggs.

2006-02-19    <jeff@mini.nerble.net>

	* tools/wud.cc: Rewrote in C++.  Uses symbol table.
	* usecode/ucsymtbl.cc (Usecode_symbol_table): Support symbol-table
	in compiled usecode.
	* usecode/ucinternal.cc:  Print function names from symbol table.
	* usecode/compiler/ucmain.cc:  Write out symbol table.

2006-02-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc, ready.h: Make missile weapons really use actual ammo.
	  Triple crossbows now fire magic bolts as they should. They also
	  spend the correct amount of ammo (3) per shot.
	* chunks.cc: Fixed a few dumb mistakes from previous commit.
	* objs/animate.cc: Fixed sound effects in SI, which I had broken
	  previously.

2006-02-12  Marzo Sette Torres Junior <marzojr@yahoo.com>