@@ -1,3 +1,7 @@
+2006-02-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Tweaked speed of 'Talk' schedule a bit. Also, modified 'Pace horizontal'
+	  and 'Pace vertical' schedules to better match original games.
+
 2006-02-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* BG Keyring Mod and SI Fixes are now licensed under the GNU GPL.
 	* For the BG Keyring Mod, I also modified a bit the NPC spellcasting
